--- a/packages/ray/lib/_section.scss
+++ b/packages/ray/lib/_section.scss
@@ -1,5 +1,5 @@
-.Section {
-  &--withPadding {
+.#{$prefix}section {
+  &--with-padding {
     padding-top: $padding-5;
     padding-bottom: $padding-5;
   }
