--- a/packages/ray/lib/components/button/button--secondary.html
+++ b/packages/ray/lib/components/button/button--secondary.html
@@ -1,6 +1,6 @@
-<button class="ray--btn ray--btn--secondary">Click Me</button>
-<button class="ray--btn ray--btn--secondary" disabled>Click Me</button>
-<button class="ray--btn ray--btn--secondary ray--btn--compact">Click Me</button>
-<button class="ray--btn ray--btn--secondary ray--btn--compact" disabled>
+<button class="ray-btn ray-btn--secondary">Click Me</button>
+<button class="ray-btn ray-btn--secondary" disabled>Click Me</button>
+<button class="ray-btn ray-btn--secondary ray-btn--compact">Click Me</button>
+<button class="ray-btn ray-btn--secondary ray-btn--compact" disabled>
   Click Me
 </button>
