--- a/packages/ray/lib/components/card/_card.scss
+++ b/packages/ray/lib/components/card/_card.scss
@@ -1,7 +1,7 @@
 $card-padding: 1rem;
 $card-border-color: $color-gray35;
 
-.card {
+.#{$prefix}card {
   width: 100%;
   border-radius: $border-radius;
   background-color: $color-white;
