feat(colors): Add colors (#26)

--- a/packages/ray/lib/_image.scss
+++ b/packages/ray/lib/_image.scss
@@ -4,7 +4,7 @@
   height: auto;
   position: relative;
   overflow: hidden;
-  background-color: $color-gray35;
+  background-color: $ray-color-gray-10;
 
   img {
     position: absolute;
@@ -39,7 +39,7 @@
   display: block;
   width: 100%;
   height: auto;
-  background-color: $color-gray35;
+  background-color: $ray-color-gray-30;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
