--- a/packages/ray/lib/_forms.scss
+++ b/packages/ray/lib/_forms.scss
@@ -5,8 +5,8 @@
 }
 
 .#{$prefix}field {
-  border: $border-width solid $color-gray35;
-  background-color: $color-white;
+  border: $border-width solid $ray-color-gray-10;
+  background-color: $ray-color-white;
   border-radius: $border-radius;
   position: relative;
   height: $field-height;
@@ -21,7 +21,7 @@
     position: absolute;
     left: $field-h-spacing;
     top: $field-v-spacing;
-    color: $color-text-medium;
+    color: $ray-color-text-medium;
     transition: all 0.125s ease;
     pointer-events: none;
 
@@ -64,7 +64,7 @@
     &:focus::placeholder,
     [placeholder] {
       text-overflow: ellipsis;
-      color: $color-text-light;
+      color: $ray-color-text-medium;
     }
   }
 
@@ -75,7 +75,7 @@
   // :focus-within is only supported in modern browsers (https://caniuse.com/#search=focus-within), --active should be used as a backup
   &--active,
   &:focus-within {
-    border-color: $color-blue50;
+    border-color: $ray-color-blue-50;
 
     label {
       font-size: $field-label-size-focus;
@@ -83,25 +83,25 @@
     }
 
     input::placeholder {
-      color: $color-text-light !important;
+      color: $ray-color-text-light !important;
     }
   }
 
   &--disabled {
-    border-color: $color-gray35;
+    border-color: $ray-color-gray-10;
   }
 
   &--success {
-    border-color: $color-green;
+    border-color: $ray-color-green-70;
   }
 
   &--error {
-    border-color: $color-red;
+    border-color: $ray-color-red-50;
   }
 
   &__hint {
     display: block;
-    color: $color-text-medium;
+    color: $ray-color-text-medium;
     font-weight: 400;
     font-size: $field-label-size-focus;
     margin-top: 0.25rem;
@@ -113,17 +113,17 @@
     white-space: nowrap;
 
     &--success {
-      color: $color-green;
+      color: $ray-color-green-70;
     }
 
     &--error {
-      color: $color-red;
+      color: $ray-color-red-50;
     }
   }
 
   [disabled] {
-    background-color: $color-gray30;
-    color: $color-black20;
+    background-color: $ray-color-gray-10;
+    color: $ray-color-gray-60;
   }
 }
 
