--- a/packages/ray/lib/components/text-field/_text-field.scss
+++ b/packages/ray/lib/components/text-field/_text-field.scss
@@ -42,13 +42,14 @@
   textarea,
   &__input {
     font-family: inherit;
+    border-radius: $border-radius;
     line-height: 1;
     width: 100%;
     height: 100%;
     font-size: $field-label-size;
     display: block;
     background-color: transparent;
-    padding: $field-v-spacing $field-h-spacing 0;
+    padding: 0 $field-h-spacing;
     outline: 0;
     border: 0;
     cursor: pointer;
@@ -57,8 +58,16 @@
     &:not(:placeholder-shown) {
       + label {
         font-size: $field-label-size-focus;
-        padding-top: $field-h-spacing - $border-width;
+        padding-top: 0;
         pointer-events: none;
+
+        top: -$field-h-spacing / 2;
+        left: $field-h-spacing / 2;
+        padding-left: $field-h-spacing / 2;
+        padding-right: $field-h-spacing / 2;
+        width: auto;
+        height: auto;
+        background: $ray-color-white;
       }
     }
 
@@ -89,8 +98,16 @@
 
     label {
       font-size: $field-label-size-focus;
-      padding-top: $field-h-spacing - $border-width;
+      padding-top: 0;
       pointer-events: none;
+
+      top: -$field-h-spacing / 2;
+      left: $field-h-spacing / 2;
+      padding-left: $field-h-spacing / 2;
+      padding-right: $field-h-spacing / 2;
+      width: auto;
+      height: auto;
+      background: $ray-color-white;
     }
 
     input::placeholder,
@@ -140,8 +157,14 @@
   }
 
   [disabled] {
-    background-color: $ray-color-gray-10;
-    color: $ray-color-gray-60;
+    background-color: $ray-color-white;
+    @include no-select;
+
+    &,
+    + label {
+      cursor: not-allowed;
+      color: rgba($ray-color-gray-60, 0.4);
+    }
   }
 }
 
@@ -174,13 +197,12 @@
   height: auto;
   min-height: $field-height;
   position: relative;
-  padding-top: $field-v-spacing + 2 * $border-width;
 
   textarea {
-    padding: 0 $field-h-spacing;
+    padding-top: calc(1rem - 2 * #{$border-width});
     resize: vertical;
     line-height: 28px;
-    height: 2rem;
+    height: $field-height;
     min-height: 2rem;
 
     &::placeholder {
@@ -189,11 +211,11 @@
   }
 
   &.#{$prefix}field--compact {
-    padding-top: $field-v-spacing-compact / 2;
     min-height: $field-height-compact;
 
     textarea {
-      height: 2rem;
+      padding-top: $field-v-spacing-compact / 2;
+      height: $field-height-compact;
       min-height: 2rem;
     }
   }
