fix: refactor form fields api (#36)
* fix: refactor form fields api

* add select

* fix active state

* fix element refs

--- a/packages/ray/lib/application.scss
+++ b/packages/ray/lib/application.scss
@@ -11,7 +11,9 @@
 @import './components/card/card';
 @import './components/button/button';
 @import './components/radio-checkbox/radio-checkbox';
+@import './components/form-item/form-item';
 @import './components/text-field/text-field';
+@import './components/select/select';
 @import './components/image/image';
 @import './components/table/table';
 @import './components/tabs/tabs';
