feat(text-fields): update compact to v2 & fix resizing triangle (#37)
* feat(text-fields): update compact to v2

* Add disabled state

* fix heights on inputs

* fix triangle

* 2px move

* fix fo real

* fix transition

* fix overflow label

* fix min-height for textaeas

--- a/packages/ray/lib/components/text-field/_text-field.scss
+++ b/packages/ray/lib/components/text-field/_text-field.scss
@@ -22,9 +22,10 @@
     padding-right: $field-h-spacing;
     padding-top: $field-v-spacing;
     color: $ray-color-text-medium;
-    transition: all 0.125s ease;
+    transition: padding 0.125s ease;
     height: 100%;
     width: 100%;
+    max-width: calc(100% - 12px);
     cursor: pointer;
 
     // handle truncating label
@@ -113,7 +114,7 @@
     &.#{$prefix}text-field--compact,
     &.#{$prefix}text-area--compact {
       label {
-        opacity: 0;
+        padding-top: 0;
       }
     }
   }
@@ -147,7 +148,6 @@
     label,
     &__label {
       padding-top: $field-v-spacing-compact;
-      transition: none;
     }
 
     input,
@@ -158,7 +158,7 @@
       &:focus,
       &:not(:placeholder-shown) {
         + label {
-          opacity: 0;
+          padding-top: 0;
           pointer-events: none;
         }
       }
@@ -167,29 +167,30 @@
 }
 
 .#{$prefix}text-area {
-  height: auto;
-  min-height: $field-height;
-  position: relative;
+  line-height: 0;
+
+  &,
+  textarea {
+    height: auto;
+    min-height: $field-height - 2 * $border-width;
+  }
 
   textarea {
-    padding-top: calc(1rem - 2 * #{$border-width});
+    display: inline-block;
+    padding-top: 1rem;
     resize: vertical;
-    line-height: 28px;
-    height: $field-height;
-    min-height: 2rem;
-
-    &::placeholder {
-      transition: none;
-    }
+    line-height: $field-line-height;
+    height: $field-height - 2 * $border-width;
   }
 
   &--compact {
     min-height: $field-height-compact;
+    line-height: 0;
 
     textarea {
       padding-top: $field-v-spacing-compact / 2;
-      height: $field-height-compact;
-      min-height: 2rem;
+      height: $field-height-compact - 2 * $border-width;
+      min-height: $field-height-compact - 2 * $border-width;
     }
   }
 }
