fix(typography): add media queries to typography classes (#42)
* fix(typography): scaling

* add comments

* typo

--- a/packages/ray/lib/global/_typography.scss
+++ b/packages/ray/lib/global/_typography.scss
@@ -16,37 +16,100 @@ h6,
 
 .h1,
 .#{$prefix}h1 {
-  font-size: 4rem;
-  line-height: 96px;
-  margin-bottom: 1.5rem;
+  // h5
+  font-size: 1.5rem;
+  line-height: 40px;
+  margin-bottom: 0.5rem;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    // h3
+    font-size: 2.5rem;
+    line-height: 60px;
+    margin-bottom: 1rem;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, lg)) {
+    font-size: 4rem;
+    line-height: 96px;
+    margin-bottom: 1.5rem;
+  }
 }
 
 .h2,
 .#{$prefix}h2 {
-  font-size: 3rem;
-  line-height: 72px;
-  margin-bottom: 1rem;
+  // h6
+  font-size: 1.25rem;
+  line-height: 40px;
+  margin-bottom: 0.5rem;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    // h4
+    font-size: 2rem;
+    line-height: 56px;
+    margin-bottom: 1rem;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, lg)) {
+    font-size: 3rem;
+    line-height: 72px;
+    margin-bottom: 1rem;
+  }
 }
 
 .h3,
 .#{$prefix}h3 {
-  font-size: 2.5rem;
-  line-height: 60px;
-  margin-bottom: 1rem;
+  // h6
+  font-size: 1.25rem;
+  line-height: 40px;
+  margin-bottom: 0.5rem;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    // h4
+    font-size: 2rem;
+    line-height: 56px;
+    margin-bottom: 1rem;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, lg)) {
+    font-size: 2.5rem;
+    line-height: 60px;
+    margin-bottom: 1rem;
+  }
 }
 
 .h4,
 .#{$prefix}h4 {
-  font-size: 2rem;
-  line-height: 56px;
-  margin-bottom: 1rem;
+  // h6
+  font-size: 1.25rem;
+  line-height: 40px;
+  margin-bottom: 0.5rem;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    // h5
+    font-size: 1.5rem;
+    line-height: 40px;
+    margin-bottom: 0.5rem;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, lg)) {
+    font-size: 2rem;
+    line-height: 56px;
+    margin-bottom: 1rem;
+  }
 }
 
 .h5,
 .#{$prefix}h5 {
-  font-size: 1.5rem;
+  // h6
+  font-size: 1.25rem;
   line-height: 40px;
   margin-bottom: 0.5rem;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    font-size: 1.5rem;
+    line-height: 40px;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .h6,
@@ -74,23 +137,59 @@ p {
 }
 
 .#{$prefix}p1 {
-  font-size: 2rem;
-  line-height: 48px;
+  // p3
+  font-size: 1.25rem;
+  line-height: 32px;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    // p2
+    font-size: 1.5rem;
+    line-height: 40px;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, lg)) {
+    font-size: 2rem;
+    line-height: 48px;
+  }
 }
 
 .#{$prefix}p2 {
-  font-size: 1.5rem;
-  line-height: 40px;
+  // p4
+  font-size: 1rem;
+  line-height: 28px;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    // p3
+    font-size: 1.25rem;
+    line-height: 32px;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, lg)) {
+    font-size: 1.5rem;
+    line-height: 40px;
+  }
 }
 
 .#{$prefix}p3 {
-  font-size: 1.25rem;
-  line-height: 32px;
+  // p4
+  font-size: 1rem;
+  line-height: 28px;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    font-size: 1.25rem;
+    line-height: 32px;
+  }
 }
 
 .#{$prefix}p4 {
-  font-size: 1rem;
-  line-height: 28px;
+  // p5
+  font-size: 0.875rem;
+  line-height: 24px;
+
+  @media (min-width: map-get($grid-breakpoints, md)) {
+    font-size: 1rem;
+    line-height: 28px;
+  }
 }
 
 .#{$prefix}p5 {
